src/test/resources/invalid/nonExhaustiveReturn/OnlyIfReturnInner.vas
// https://rosettacode.org/wiki/Four_bit_adder#Kotlin

class Main is
    method foo() : Integer is
        var a : Integer = 0
        var b : Integer = 0
        var c : Integer = 1
        if a.equal(b) then
            a = 2
            if a.less(b) then
                return a
            end
        else
            return b
        end
    end
end
